gccida/c0/simplify_subtraction
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_subtraction/src/varasm.c:4142:21: error: use of undeclared identifier 'machine_mode'
decode_rtx_const( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), x->fld[0].rtx, &val0); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_subtraction/src/varasm.c:4142:36: error: expected expression
decode_rtx_const( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), x->fld[0].rtx, &val0); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_subtraction/src/varasm.c:4143:21: error: use of undeclared identifier 'machine_mode'
decode_rtx_const( ( machine_mode)BYTE2( *( _DWORD *)xa), *( rtx *)&xa[1], &val1); 
                    ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_subtraction/src/obj/varasm.o] Error 1
